[gd_scene load_steps=14 format=3 uid="uid://diu4q6now4xlo"]

[ext_resource type="Script" path="res://assets/scenes/prefabs/player_inside_container.gd" id="1_duc1h"]
[ext_resource type="Script" path="res://assets/scenes/prefabs/player_inside.gd" id="1_t53x0"]
[ext_resource type="Texture2D" uid="uid://c83um0ysvt7g0" path="res://assets/sprites/other/tlo.png" id="2_1xe42"]
[ext_resource type="SpriteFrames" uid="uid://b2qkags0xceuf" path="res://assets/animations/personAS.tres" id="2_bhpyp"]
[ext_resource type="SpriteFrames" uid="uid://102nro1wij3w" path="res://assets/animations/krzeslo.tres" id="3_j8oju"]
[ext_resource type="Texture2D" uid="uid://5pwubqk1uqkx" path="res://assets/sprites/objects/dowrzucaniaboostow.png" id="5_1noh3"]
[ext_resource type="Texture2D" uid="uid://uc03s8dyo44a" path="res://assets/sprites/objects/dowyrzucaniaboostow.png" id="7_c4iax"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67w1b"]
size = Vector2(41, 471.185)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjm1u"]
size = Vector2(41, 305)

[sub_resource type="CircleShape2D" id="CircleShape2D_rtmai"]
radius = 21.9367

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q7ynf"]
size = Vector2(59.2639, 65.6418)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1je1p"]
size = Vector2(63.0148, 43.5118)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ij582"]
size = Vector2(106.774, 84.7712)

[node name="PlayerInsideContainer" type="Node2D"]
z_index = 75
scale = Vector2(2.666, 2.666)
script = ExtResource("1_duc1h")

[node name="ProjektantBackground" type="ColorRect" parent="."]
offset_left = -725.0
offset_top = -408.0
offset_right = -120.0
offset_bottom = 409.0
color = Color(0.133333, 0.129412, 0.141176, 1)

[node name="Boundaries" type="StaticBody2D" parent="."]
z_index = 155
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(-467.742, -1.50038)
shape = SubResource("RectangleShape2D_67w1b")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(-305.326, -241.185)
rotation = -1.5708
shape = SubResource("RectangleShape2D_jjm1u")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(-301.951, 247.562)
rotation = -1.5708
shape = SubResource("RectangleShape2D_jjm1u")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(-133.158, -1.15866)
shape = SubResource("RectangleShape2D_67w1b")

[node name="PlayerInside" type="CharacterBody2D" parent="."]
z_index = 1030
collision_layer = 2
collision_mask = 2
script = ExtResource("1_t53x0")
bulletPath = "res://assets/scenes/prefabs/playerBullet.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInside"]
z_index = 2095
position = Vector2(-298, 1)
shape = SubResource("CircleShape2D_rtmai")

[node name="Label" type="Label" parent="PlayerInside"]
z_index = 2785
texture_filter = 3
offset_left = -385.971
offset_top = -67.1418
offset_right = -209.971
offset_bottom = -44.1418
theme_override_colors/font_color = Color(1, 0.694748, 0.678092, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 0
text = "[X] Text Here"
horizontal_alignment = 1

[node name="AnimatedSprite2DContainer" type="Node2D" parent="PlayerInside"]
position = Vector2(-297.824, 1.12528)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerInside/AnimatedSprite2DContainer"]
z_index = 1390
rotation = 1.5708
scale = Vector2(0.5, 0.5)
sprite_frames = ExtResource("2_bhpyp")
animation = &"idle"

[node name="TurretChair" type="Node2D" parent="."]
z_index = -25

[node name="SitDownArea2D" type="Area2D" parent="TurretChair"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurretChair/SitDownArea2D"]
position = Vector2(-301.951, 118.717)
shape = SubResource("RectangleShape2D_q7ynf")

[node name="Collider" type="StaticBody2D" parent="TurretChair"]
position = Vector2(-301.951, 133.908)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurretChair/Collider"]
shape = SubResource("RectangleShape2D_1je1p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TurretChair"]
z_index = 45
texture_filter = 1
position = Vector2(-301.951, 133.908)
scale = Vector2(0.5, 0.5)
sprite_frames = ExtResource("3_j8oju")
animation = &"sitting"

[node name="Engine" type="Node2D" parent="."]

[node name="EngineArea2D" type="Area2D" parent="Engine"]
z_index = 1950
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Engine/EngineArea2D"]
position = Vector2(-297.948, -196.174)
shape = SubResource("RectangleShape2D_ij582")

[node name="Sprite2D" type="Sprite2D" parent="Engine"]
z_index = 85
position = Vector2(-297.824, -205.551)
scale = Vector2(0.75288, 0.75288)
texture = ExtResource("5_1noh3")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(-300, 0.375)
scale = Vector2(0.853213, 0.853213)
texture = ExtResource("2_1xe42")

[node name="BoostInContainer" type="Node2D" parent="."]

[node name="BoostIn1" type="Node2D" parent="BoostInContainer"]

[node name="BoostInArea2D" type="Area2D" parent="BoostInContainer/BoostIn1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoostInContainer/BoostIn1/BoostInArea2D"]
position = Vector2(-162.416, -155.664)
rotation = 1.57079
shape = SubResource("RectangleShape2D_ij582")

[node name="Sprite2D" type="Sprite2D" parent="BoostInContainer/BoostIn1/BoostInArea2D"]
z_index = 85
texture_filter = 3
position = Vector2(-163.166, -156.414)
rotation = 1.57079
scale = Vector2(0.75288, 0.75288)
texture = ExtResource("7_c4iax")

[connection signal="body_entered" from="TurretChair/SitDownArea2D" to="PlayerInside" method="_on_sit_down_area_2d_body_entered"]
[connection signal="body_exited" from="TurretChair/SitDownArea2D" to="PlayerInside" method="_on_sit_down_area_2d_body_exited"]
[connection signal="body_entered" from="Engine/EngineArea2D" to="PlayerInside" method="_on_engine_area_2d_body_entered"]
[connection signal="body_exited" from="Engine/EngineArea2D" to="PlayerInside" method="_on_engine_area_2d_body_exited"]
